# MOT_for_Embedded_Devices

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
FD/: CMakeLists.txt  fd.cpp  fd.hpp
ObjectDetect/: CMakeLists.txt  detect.cpp  detect.hpp
ObjectTrack/: CMakeLists.txt  track.cpp  track.hpp
docs/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_k_c_f_tracker-members.html  class_k_c_f_tracker.html  class_k_c_f_tracker.js  class_tracker-members.html  class_tracker.html  class_tracker.js  class_tracking-members.html  class_tracking.html  class_tracking.js  classes.html  classfd_object-members.html  classfd_object.html  classfd_object.js  classobj_detect-members.html  classobj_detect.html  classobj_detect.js  classobj_track-members.html  classobj_track.html  classobj_track.js  detect_8cpp.html  detect_8cpp_8o_8d.html  detect_8hpp.html  detect_8hpp.js  detect_8hpp_source.html  dir_24fefe0cd9983ab9e3fac52546308255.html  dir_24fefe0cd9983ab9e3fac52546308255.js  dir_29bf2c99996355785e288cb968bac4aa.html  dir_29bf2c99996355785e288cb968bac4aa.js  dir_32374f0100f8f08e082c03fedb4efeb5.html  dir_32374f0100f8f08e082c03fedb4efeb5.js  dir_41abe4c63b9df0b95d258f6661dcda72.html  dir_41abe4c63b9df0b95d258f6661dcda72.js  dir_427b7ed89a084c7ac287f9b34630cba6.html  dir_427b7ed89a084c7ac287f9b34630cba6.js  (+99 more)
docs/html/search/: all_0.js  (+84 more)
include/: funcs.h
kcf/: CMakeLists.txt  ffttools.cpp  ffttools.hpp  kcftracker.cpp  kcftracker.hpp  tracker.h
src/: CMakeLists.txt  funcs.cpp  funcs.hpp  main.cpp
